control/legacy_workspaces/archive_legacy_ShadowTag-v2/server_log_frozen_v2.txt
Traceback (most recent call last):
  File "/Users/pikeymickey/aiyou-stack/ShadowTag-v2/bin/flyingmonkeys-server", line 42, in <module>
    from src.flyingmonkeys.agents.flying_monkeys import FlyingMonkeys, LLMProvider, AgentTier
  File "/Users/pikeymickey/aiyou-stack/ShadowTag-v2/src/flyingmonkeys/agents/flying_monkeys.py", line 1
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
